Vertical Align fix

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 }
 
 .innerbody{
+    width: 100%;
     margin: 0 auto;
 }
 
